--- a/application/admin/view/sharing/add_topic.html
+++ b/application/admin/view/sharing/add_topic.html
@@ -11,28 +11,28 @@
                 </div>
                 <div class="ibox-content">
                     <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('add_topic')}"  enctype="multipart/form-data">
-                        <input type="hidden" name="id" value="5">
+                        <input type="hidden" name="id" value="{$info.id}">
                         <div class="form-group">
                             <label class="col-sm-2 control-label">话题名称</label>
                             <div class="col-sm-9">
-                                <input type="text" name="name" value="" class="form-control">
+                                <input type="text" name="name" value="{$info.name}" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">排序</label>
                             <div class="col-sm-9">
-                                <input type="text" name="sort" value="" class="form-control">
+                                <input type="text" name="sort" value="{$info.sort}" class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-2 control-label">状态</label>
                             <div class="col-sm-9">
                                 <div class="radio radio-success radio-inline">
-                                    <input type="radio" value="1" name="status" checked="true" id="show1" >
+                                    <input type="radio" value="0" name="status" {if condition="$info.status eq 0"}checked="true"{/if} id="show1" >
                                     <label for="show1">启用</label>
                                 </div>
                                 <div class="radio radio-danger radio-inline">
-                                    <input type="radio" value="0" name="status" id="show2"  >
+                                    <input type="radio" {if condition="$info.status eq 1"}checked="true"{/if} value="1" name="status" id="show2"  >
                                     <label for="show2">禁用</label>
                                 </div>
                             </div>
