--- a/application/admin/view/order/refund_edit.html
+++ b/application/admin/view/order/refund_edit.html
@@ -97,7 +97,7 @@
                     <label class="col-xs-12 col-sm-2 control-label">申请日期
                       </label>
                       <div class="col-sm-8 col-xs-12">
-                            <span class="help-block">{$info.addtime|date="y-m-d H:i:s",###}</span> 
+                            <span class="help-block">{$info.addtime|date="Y-m-d H:i:s",###}</span> 
                         </div>
                 </div>
                 <div class="form-group form-group-s s"  >
