--- a/application/admin/view/order/refund_edit.html
+++ b/application/admin/view/order/refund_edit.html
@@ -116,6 +116,22 @@
                         </div>
                  </div>
                  <div class="form-group form-group-s s"  >
+                    <label class="col-xs-12 col-sm-2 control-label">订单金额</label>
+                        <div class="col-sm-8 col-xs-12">
+                                <span class="help-block">  
+                                       {$info.real_pay_price}
+                                </span> 
+                        </div>
+                 </div>
+                 <div class="form-group form-group-s s"  >
+                    <label class="col-xs-12 col-sm-2 control-label">退款金额</label>
+                        <div class="col-sm-8 col-xs-12">
+                                <span class="help-block">  
+                                    {$info.price}
+                                </span> 
+                        </div>
+                 </div>
+                 <div class="form-group form-group-s s"  >
                     <label class="col-xs-12 col-sm-2 control-label">退货原因</label>
                         <div class="col-sm-8 col-xs-12">
                                 <span class="help-block">  
