--- a/application/admin/view/sharing/add_topic.html
+++ b/application/admin/view/sharing/add_topic.html
@@ -10,12 +10,37 @@
                     <h5>添加话题</h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('add_topic')}"  enctype="multipart/form-data">
+                    <form method="post" class="form-horizontal"  action="{:url('add_topic')}"  enctype="multipart/form-data">
                         <input type="hidden" name="id" value="{$info.id}">
+                        <input type="hidden" name="img" value="{$info.img}">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">话题名称</label>
+                            <label class="col-sm-2 control-label"><span style="color:red;">*</span>话题名称</label>
                             <div class="col-sm-9">
                                 <input type="text" name="name" value="{$info.name}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">上级话题</label>
+                            <div class="col-sm-9">
+                                <div style="line-height:34px;float:left;margin:0 10px 0 0;width: 100%">
+                                    <select class="form-control" name="pid" >
+                                        <option value="" >顶级话题</option>
+                                        {volist name="topic_list" id="vo"}
+                                        <option value="{$vo.id}" {if condition="$vo.id eq $pid"}selected{/if} {if condition="$vo.id eq $info.pid"}selected{/if} >{$vo.name}</option>
+                                        {/volist}
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label">封面图</label>
+                            <div class="col-sm-9">
+                                    <dd class="upload_area clearfix" style="margin: 0 auto;">
+                                        <ul id="imglist" class="post_imglist">
+                                            <li><img class="wh60" id="image_src" src="{$info.img|default='/static/images/default.jpg'}"></li>
+                                        </ul>
+                                        <label for="image_file"><div class="upload_btn"></div></label>
+                                    </dd>
                             </div>
                         </div>
                         <div class="form-group">
@@ -23,7 +48,7 @@
                             <div class="col-sm-9">
                                 <input type="text" name="sort" value="{$info.sort}" class="form-control">
                             </div>
-                        </div>
+                        </div> 
                         <div class="form-group">
                             <label class="col-sm-2 control-label">状态</label>
                             <div class="col-sm-9">
@@ -44,6 +69,10 @@
                             </div> 
                         </div>
                     </form>
+                    <!-- 图片上传 -->
+                    <form method="post" class="form-horizontal" id="ajaxForm" action="{:url('goods/upload_file')}" enctype="multipart/form-data">
+                        <input type="file" id="image_file" value="" accept="image/*" name="file" onchange="upload_file()" style="display: none">
+                    </form>
                 </div>
             </div>
         </div>
@@ -54,36 +83,17 @@
 
 {block name="script"}
 <script src="__STATIC__/js/jquery.form.js" type="text/javascript"></script>
-<script>
-    $(function() {
-        var id = "{$Think.get.id}";
-        // 图片检测格式
-        $('#pictur_btn').change(function() {
-            if (!this.value) {
-                $("#img_show").attr('src', '');
-                filedata = '';
-                pictur = '';
-                return false;
-            }
-            var file = this.files[0];
-            var ext = file.name.substr(-3, 3);
-            if (ext != 'jpg' && ext != 'gif' && ext != 'png') {
-                layer.msg("文件格式不正确", { icon: 5 });
-                window.location.reload();
-                return false;
-            }
-            if (file.size > 5120000) {
-                layer.msg("该文件太大无法上传", { icon: 5 });
-            } else {
-                var reader = new FileReader();
-                //将文件以Data URL形式读入页面  
-                reader.readAsDataURL(file);
-                reader.onload = function(e) {
-                    $('.img-preview').show();
-                    $("#img_show").attr('src', this.result);
-                }
+<script type="text/javascript">
+    //文件上传
+    function upload_file(){
+        $("#ajaxForm").ajaxSubmit(function (data) {
+            if(data.status == 1){
+                $('input[name="img"]').val(data.data);
+                $('#image_src').attr('src',data.data);
+            }else{
+                alert(data.msg);
             }
         });
-    });
+    }
 </script>
 {/block}
