--- a/application/admin/view/sharing/topic_list.html
+++ b/application/admin/view/sharing/topic_list.html
@@ -36,10 +36,23 @@
                                 <td>{if condition="$vo.status"}禁用{else/}启用{/if}</td>
                                 <td>{$vo.addtime|date="Y-m-d",###}</td>
                                 <td>
+                                    <a class="btn btn-default delete" href="{:url('add_topic',['pid'=>$vo.id],false)}" >添加下级话题</i></a>
                                     <a class="btn btn-default delete" href="{:url('add_topic',['id'=>$vo.id],false)}" >编辑</i></a>
                                     <a class="btn btn-default delete" onclick="del(this,{$vo.id})" href="javascript:;" >删除 </i></a>
                                 </td>
                             </tr>
+                                {volist name="vo['list']" id="vv"}
+                                <tr>
+                                    <td>{$vv.id}</td>
+                                    <td>------{$vv.name}</td>
+                                    <td>{if condition="$vv.status"}禁用{else/}启用{/if}</td>
+                                    <td>{$vv.addtime|date="Y-m-d",###}</td>
+                                    <td>
+                                        <a class="btn btn-default delete" href="{:url('add_topic',['id'=>$vv.id],false)}" >编辑</i></a>
+                                        <a class="btn btn-default delete" onclick="del(this,{$vv.id})" href="javascript:;" >删除 </i></a>
+                                    </td>
+                                </tr>
+                                {/volist}
                             {/volist}
                             </tbody>
                         </table>
