--- a/application/admin/view/sharing/article_list.html
+++ b/application/admin/view/sharing/article_list.html
@@ -34,7 +34,7 @@
                                 <td>{$vo.id}</td>
                                 <td>{$vo.title}</td>
                                 <td>{$vo.sort}</td>
-                                <td>{$vo.addtime|date="Y-m-d",###}</td>
+                                <td>{$vo.addtime|date="Y-m-d H:i:s",###}</td>
                                 <td>
                                     <a class="btn btn-default delete" href="{:url('add_article',['id'=>$vo.id],false)}" >编辑</i></a>
                                     <a class="btn btn-default delete" onclick="del(this,{$vo.id})" href="javascript:;" >删除 </i></a>
